[package]
name = "cloudinary_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
rand = "0.8.5"
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls", "multipart", "blocking"] }
csv = "1.3.0"
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
